--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,11 @@
+$black_color: #000000;
 $bgcolor: rgb(224, 224, 224);
-$textColor: #db4437;
 $cardBgColor: rgba(139, 134, 134, 0.842);
+$dark_gray: #3b3b3b;
 $footerBgColor: rgb(53, 52, 52);
+$textColor: #db4437;
+$white_color: #ffffff;
+
 
 * {
   margin: 0;
@@ -10,54 +14,25 @@ $footerBgColor: rgb(53, 52, 52);
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", sans-serif;
   background: url("../img/Books-Bg1.png");
   background-size: cover;
-  background-attachment: fixed;
-}
-
-.heading-name {
-  font-size: 52px;
-  width: 50rem;
-  margin: 0 auto;
 }
 
 img {
-  height: 12rem;
-  width: 8rem;
-  border-radius: 0.5rem;
-}
-
-h1 {
-  color: black;
-  font-size: 1.5rem;
-}
-
-h2 {
-  text-align: center;
-  padding-top: 1rem;
-  color: $textColor;
+  height: 192px;
+  width: 128;
+  border-radius: 1px;
 }
 
 h3 {
   color: $textColor;
   text-align: center;
-  padding-bottom: 1rem;
-}
-
-p {
-  font-size: 0.8rem;
-}
-
-input[type="text"] {
-  width: 20em;
-  height: 3em;
-  padding: 10px 10px;
+  padding: 0 0 16px 0;
 }
 
 a {
-  color: #3b3b3b;
+  color: $dark_gray;
   text-decoration: underline;
   transition: 0.3s;
 }
@@ -76,31 +51,31 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  font-size: 0.8rem;
+  font-size: 12px;
 }
 
 .container {
   width: 90%;
-  max-width: 120rem;
+  max-width: 1920px;
   height: 100%;
   margin: 0 auto;
   position: relative;
   display: grid;
-  grid-gap: 2rem;
+  grid-gap: 32px;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
 }
 
 .custom-card {
   background-color: $cardBgColor;
-  padding: 1rem;
-  border-radius: 1rem;
+  padding: 16px;
+  border-radius: 16px;
 }
 
 .scroll-to-top {
   position: fixed;
-  bottom: 0.5rem;
-  right: 0.5rem;
+  bottom: 8px;
+  right: 8px;
   animation: fadeIn 700ms ease-in-out 1s both;
   cursor: pointer;
   width: 50px;
@@ -114,7 +89,7 @@ ul {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background: #0d1117;
+  background: $black_color;
 
   fill: white;
   transform: rotate(-90deg);
@@ -126,15 +101,15 @@ ul {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   background-color: #e0e0e0;
-  border-radius: 1rem;
-  padding: 1rem;
+  border-radius: 16px;
+  padding: 16px;
   transition: 0.2s ease-in-out;
   -webkit-transition: 0.2s ease-in-out;
   .image {
-    height: 12rem;
-    width: 8rem;
+    height: 192px;
+    width: 128px;
     margin: 0 auto;
-    border-radius: 0.5rem;
+    border-radius: 8px;
   }
 
   .content {
@@ -147,18 +122,8 @@ ul {
     background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
     border-radius: 5px;
     background-size: 200% 100%;
-    margin: 0.5rem auto;
+    margin: 8px auto;
     animation: 1.5s shine linear infinite;
-  }
-
-  h2 {
-    height: 30px;
-  }
-
-  p {
-    height: 20px;
-    width: 80%;
-    margin: 0.4rem auto;
   }
 }
 
@@ -176,43 +141,24 @@ ul {
   margin-bottom: 50px;
 
   button {
-    padding: 0.7rem 1.4rem 0.7rem 1.4rem;
-    background-color: white;
+    padding: 10px 20px 10px 20px;
+    background-color: $white_color;
     border: 1px solid $footerBgColor;
-    color: black;
-    border-radius: 0.4rem;
+    color: $black_color;
+    border-radius: 8px;
     cursor: pointer;
     transition: 0.5s ease-in-out;
-
-
     &:hover {
       background-color: $footerBgColor;
-      color: white;
+      color: $white_color;
       animation: hover .5s ease-in-out;
     }
-
-    @keyframes hover {
-      from {
-        background-color: white;
-        color: black;
-      }
-      to {
-        background-color: $footerBgColor;
-        color: white;
-      }
-    }
-  }
-}
-
-@keyframes shine {
-  to {
-    background-position-x: -200%;
   }
 }
 footer {
   background: $footerBgColor;
   padding: 1rem;
-  color: white;
+  color: $white_color;
   text-align: center;
 }
 
@@ -292,39 +238,4 @@ footer {
 .popup > .content {
   max-height: 30%;
   word-break: break-word;
-}
-
-@media screen and (max-width: 820px) {
-  .popup {
-    width: 70%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-
-  .loading-name {
-    width: 90%;
-    font-size: 1rem;
-  }
-
-  .heading-name {
-    width: auto;
-    font-size: 2rem;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .heading-name {
-    width: auto;
-    font-size: 1.5rem;
-  }
-}
-
-@media screen and (max-width: 200px) {
-  .github-icon {
-    top: -50px;
-  }
 }
